public/style.css
/* ... */
  .modal-dialog {
    display: inline-block;
    text-align: left;
    vertical-align: middle;

  }
  
.modal .modal-content{
    border-radius: 0;
    box-shadow: none;
    text-align: center;
    width: 100%;
    height: 100%;
    margin-left: auto;
    margin-right: auto;
    width: 150%;
    margin-left: -25%;
    
}
.modal .modal-content .modal-body{
    padding: 5% 0;
    padding-bottom: 8%;
}
.modal h2{
    text-transform: uppercase;
    font-size: 1.4vw;
    font-family: dodit-regular,-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
}
.modal form{
    width: 50%;
    margin: 0 auto;
    /* padding: 50px 0; */
    text-transform: capitalize;
}
.modal form input,.modal form textarea{
    text-transform: uppercase;
    display: block;
    width: 100%;
    padding: 10px 5px;
    margin: 20px 0;
    font-family: helvetica-neue, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
    font-size: .6vw;
    color: #a7a7a7 
}

.success-message{
    display: block;
    width: 100%;
    padding: 10px 5px;
    margin: 20px 0;
    font-family: helvetica-neue-italic,  -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
    color: #707070;
    font-size: 15px;
    width: 150%;
    margin-left: -25%;
    
}

.success-message-big{
    display: block;
    width: 100%;
    padding: 10px 5px;
    margin: 20px 0;
    font-family: helvetica-neue-italic,  -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
    color: #707070;
    font-size: 2em;
}

.modal form input:focus,.modal form textarea:focus{
    outline: unset;
}
.modal form textarea{
    height: 40px;
}
.modal form button{
    background-color: #000;
    width: 100%;
    color: #fff;
    padding: .5vh 0;
    padding-top: .6vh;
    font-size: .56vw;
    margin-top: 5%;
    text-transform: uppercase;
    font-family: helvetica-neue, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
}
.left{
    left: -45%;
    position: relative;
    z-index: -1;
}
.nav-custom{
    padding: 5px 0 !important;
    text-align: center;
    visibility:hidden;
    opacity: 0;
    transition: all ease-in-out 0.5s, opacity ease-in-out 0.5s
    
}
nav.header-fixed:hover .nav-custom{
    opacity: 1;
    visibility: visible;

}
.nav-custom ul{
    margin: 0;
    

    margin-left: -1%;
    /* margin-right:  */
}
.nav-custom li a:hover{
    text-decoration: none;
    font-family: helvetica-neue-bold;
    /* transition: background-color 0.5s ease;
    background-color: red; */
    /* font-weight: 100; */

}
.nav-custom li a{
    text-decoration: none;
    font-family: helvetica-neue-thin;
    /* transition: background-color 0.5s ease;
    background-color: red; */
    /* font-weight: 100; */

}
.dropdown button a:focus{
    outline: unset;
    text-decoration: none;
}
.dropdown .dropdown-content{
    left: 5px;
}
.dropdown .dropdown-content button{
    padding: 0 10px;
    /* font-family: helvetica-neue-regular; */
}
/* .side-labels {
	position: fixed;
	z-index: 999;
	left: 0;
	top: 0;
	width: 100%;
}
.side-labels span{
    text-align: right;
    font-weight: 100;
}
.side-labels span.deselect-all{
    margin-left: 22px;
}
.side-labels span:hover{
    font-weight: 500;
} */
.image_text .close {
    position: absolute;
	color: #000;
	/* opacity: 1;container pad */
	/* font-size: 14px; */
	background-color: rgba(255,255,255,0.3);
	width: 100%;
	height: 100%;
    text-align: right;

}
.image_text .talents-close{
    position: absolute;
	color: #000;
	opacity: 0.5;
    /* font-size: 14px; */
    /* font-weight: lighter; */
	background-color: rgba(255,255,255,0.3);
	width: 100%;
    height: 100%;
    text-align: right;
    
}
.material-icons.md-1 { font-size: 1em; }
.material-icons.md-2 { font-size: .8em; }

.fa-times-thin:before{
    /* content: '\00d7';
    font-size:14px;
    margin-top: -0.85em;
    margin-right: -1.5em; */
    /* position: absolute; */
    /* z-index: 1; */
    /* position: absolute; */
    
}
/* .fa-times-thin:before .image_text .close {
    content: '\00d7';
    font-size:14px;
    margin-top: -.87em;
    
} */
.image_text:hover img{
    opacity: 0.5;
}
.image_text_faded{
    opacity: 0.5;
}
.image_text .close p{
    padding: 5px 10px;
    margin: 0;
    font-weight: 500;
    cursor: pointer;
    font-family: Arial, Helvetica, sans-serif
}

.image_text .close i{
    visibility: hidden;
}

.image_text:hover .close i {
    visibility: visible;
}


.image_text .talents-close i{
    visibility: hidden;
}

.image_text:hover .talents-close i {
    visibility: visible;
}


.dropdown:hover {
    opacity: 1;
    font-weight: bolder;
    font-family: helvetica-neue-bold;
    font-style: italic;

    /* font-size: xx-large; */
}
.dropdown:hover .dropdown-content{
    font-weight: normal;
    font-family: helvetica-neue-light;
}
/* ... */

